--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -26,12 +26,13 @@ html {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
+  text-align: center;
 }
 
 .about-section {
   padding: 50px;
   text-align: center;
-  background-color: #474e5d;
+  background-color: #6890e7;
   color: white;
 }
 
@@ -46,7 +47,7 @@ html {
 }
 
 .title {
-  color: grey;
+  color: rgb(136, 0, 0);
 }
 
 .button {
@@ -76,7 +77,7 @@ html {
 <body>
 
 <div class="about-section">
-  <h1>About Us Page</h1>
+  <h1>About Us </h1>
   <p>Some text about who we are and what we do.</p>
   <p>Resize the browser window to see that this page is responsive by the way.</p>
 </div>
@@ -86,10 +87,11 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/user-male--v1.png" width="70px" >
         <h2>Jane Doe</h2>
         <p class="title">CEO & Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>jane@example.com</p>
+        <p>jane.doe@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -98,10 +100,11 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/user-male--v1.png" width="70px">
         <h2>Mike Ross</h2>
         <p class="title">Art Director</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>mike@example.com</p>
+        <p>mike.ross@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -110,10 +113,11 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/user-male--v1.png" width="70px">
         <h2>John Doe</h2>
         <p class="title">Designer</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>john@example.com</p>
+        <p>john.doe@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
