--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,3 +63,6 @@
         <p class="text-footer color:white;">
             Copyright ©-All rights are reserved
         </p>
+</footer>
+</body>
+</html>
