--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -34,13 +34,19 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+h1{
+  text-align: center;
+}
 </style>
 </head>
 <body>
 
-<h3>Contact Form</h3>
+<h1>Contact Form</h1>
 
 <div class="container">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-1">
   <form action="/action_page.php">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -60,6 +66,9 @@ input[type=submit]:hover {
 
     <input type="submit" value="Submit">
   </form>
+  </div>
+  </div>
+  </div>
 </div>
 
 </body>
